force-app/main/default/objects/Finanzierungsbaustein__c/Finanzierungsbaustein__c.object-meta.xml
<CustomObject>
    <label>Finanzierungsbaustein</label>
    <nameField>
        <label>Finanzierungsbaustein Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finanzierungsbausteine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>