force-app/main/default/objects/Finanzierungsbaustein__c/fields/Art__c.field-meta.xml
<CustomField>
    <fullName>Art__c</fullName>
    <label>Art</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annuitäten Darlehen</fullName>
                <default>true</default>
                <label>Annuitäten Darlehen</label>
            </value>
            <value>
                <fullName>Endfälliges Darlehen</fullName>
            </value>
            <value>
                <fullName>KfW Darlehen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>