force-app/main/default/objects/Finanzierungsbaustein__c/fields/AunnitaetInEuro__c.field-meta.xml
<CustomField>
    <fullName>AunnitaetInEuro__c</fullName>
    <formula>Kreditsumme__c * ZinsInPercent__c + Kreditsumme__c * TilgungInPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annuität in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>