force-app/main/default/objects/Finanzierungsbaustein__c/fields/Berechnung__c.field-meta.xml
<CustomField>
    <fullName>Berechnung__c</fullName>
    <label>Berechnung</label>
    <referenceTo>Berechnung__c</referenceTo>
    <relationshipLabel>Finanzierungsbausteine</relationshipLabel>
    <relationshipName>Finanzierungsbausteine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>