force-app/main/default/objects/Finanzierungsbaustein__c/fields/BerechnungsApartment__c.field-meta.xml
<CustomField>
    <fullName>BerechnungsApartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Berechnungs-Apartment</label>
    <referenceTo>BerechnungsApartment__c</referenceTo>
    <relationshipLabel>Finanzierungsbausteine</relationshipLabel>
    <relationshipName>Finanzierungsbausteine</relationshipName>
    <type>Lookup</type>
</CustomField>