force-app/main/default/objects/Finanzierungsbaustein__c/fields/FesteLaufzeit__c.field-meta.xml
<CustomField>
    <fullName>FesteLaufzeit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feste Laufzeit</label>
    <type>Checkbox</type>
</CustomField>