force-app/main/default/objects/Finanzierungsbaustein__c/fields/Finanzierungsbeginn__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsbeginn__c</fullName>
    <formula>IF( today() &gt; Berechnung__r.Hauptimmobilie__r.Arrival__c, today(), Berechnung__r.Hauptimmobilie__r.Arrival__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finanzierungsbeginn</label>
    <type>Date</type>
</CustomField>