force-app/main/default/objects/Finanzierungsbaustein__c/fields/IstEigenkapitalBaustein__c.field-meta.xml
<CustomField>
    <fullName>IstEigenkapitalBaustein__c</fullName>
    <formula>TEXT(Art__c) = &apos;Eigenkapital&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ist Eigenkapital Baustein?</label>
    <type>Checkbox</type>
</CustomField>