force-app/main/default/objects/Finanzierungsbaustein__c/fields/Kreditsumme__c.field-meta.xml
<CustomField>
    <fullName>Kreditsumme__c</fullName>
    <label>Kreditsumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>