force-app/main/default/objects/Finanzierungsbaustein__c/fields/TilgungInPercent__c.field-meta.xml
<CustomField>
    <fullName>TilgungInPercent__c</fullName>
    <label>Tilgung in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>