force-app/main/default/objects/Finanzierungsbaustein__c/fields/TilgungInPercentText__c.field-meta.xml
<CustomField>
    <fullName>TilgungInPercentText__c</fullName>
    <formula>SUBSTITUTE(TEXT(ROUND(TilgungInPercent__c, 4) * 100), &apos;.&apos;, &apos;,&apos;) +
IF(NOT(CONTAINS(RIGHT(SUBSTITUTE(TEXT(ROUND(TilgungInPercent__c, 4) * 100), &apos;.&apos;, &apos;,&apos;), 3), &apos;,&apos;)), &apos;,00&apos;, IF(CONTAINS(RIGHT(SUBSTITUTE(TEXT(ROUND(TilgungInPercent__c, 4) * 100), &apos;.&apos;, &apos;,&apos;), 2), &apos;,&apos;), &apos;0&apos;, &apos;&apos;)) + &apos; %&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tilgung in Prozent Text</label>
    <type>Text</type>
</CustomField>