force-app/main/default/objects/Finanzierungsbaustein__c/fields/TilgungProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>TilgungProMonatInEuro__c</fullName>
    <formula>TilgungInPercent__c * Kreditsumme__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tilgung pro Monat in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>