force-app/main/default/objects/Finanzierungsbaustein__c/fields/Tilgungsbeginn__c.field-meta.xml
<CustomField>
    <fullName>Tilgungsbeginn__c</fullName>
    <label>Tilgungsbeginn</label>
    <type>Date</type>
</CustomField>