force-app/main/default/objects/Finanzierungsbaustein__c/fields/Zinsfestschreibung__c.field-meta.xml
<CustomField>
    <fullName>Zinsfestschreibung__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Zinsfestschreibung</label>
    <type>Checkbox</type>
</CustomField>