force-app/main/default/objects/Finanzierungsbaustein__c/fields/ZinsInPercent__c.field-meta.xml
<CustomField>
    <fullName>ZinsInPercent__c</fullName>
    <label>Zins in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>