force-app/main/default/objects/Finanzierungsbaustein__c/fields/ZinsInProzentNachZinsbindung__c.field-meta.xml
<CustomField>
    <fullName>ZinsInProzentNachZinsbindung__c</fullName>
    <label>Zins in Prozent nach Zinsbindung</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>