force-app/main/default/objects/Finanzierungsbaustein__c/fields/ZinsProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>ZinsProMonatInEuro__c</fullName>
    <formula>ZinsInPercent__c * Kreditsumme__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zins pro Monat in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>